fix: Increase contrast and add aria label

--- a/src/components/dashboard-table/table.css
+++ b/src/components/dashboard-table/table.css
@@ -13,6 +13,10 @@
 	float: left;
 }
 
+.dashboard-table.ReactTable .rt-noData {
+	color: rgba(0,0,0,0.75);
+}
+
 .dashboard-table .rt-th {
 	color: darkslategrey;
 }
